# plume

./: .gitignore  README.md  ROADMAP.md  VISION.md  package-lock.json  package.json
.github/workflows/: release.yml
python/: conftest.py  plume_ml.py  requirements.txt  test_validation.py  validation_report.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  lib.rs  main.rs  ml.rs
src/components/: ChartSizeToggle.tsx  DataTable.tsx  DropZone.tsx  HistoryPanel.tsx  ModelView.tsx  ResultsView.tsx  ShapeView.tsx  Sidebar.tsx  VisualizeView.tsx
src/stores/: appStore.ts
src/styles/: index.css
src/types/: data.ts
