[package]
name = "plume"
version = "1.1.0"
description = "Plume - No-code ML for everyone"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
polars = { version = "0.53.0", features = ["csv", "parquet", "json", "lazy"] }
tokio = { version = "1.50.0", features = ["rt"] }
calamine = "0.26"
